# molet

./: .editorconfig  .eslintrc.cjs  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
molet-app/: .gitignore  Cargo.toml
molet-app/src/: lib.rs  main.rs  op.rs  ui.rs
molet-app/src/common/: error.rs
molet-app/src/conf/: conf.rs  config.rs  mod.rs
molet-app/src/data/: db.rs  db_data.rs  mod.rs
molet-app/src/op/: data_op.rs
molet-app/src/ui/: data_table.rs  data_table_ui.rs  system_tray.rs  system_tray_ui.rs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/common/: error.rs  global.rs
src-tauri/src/conf/: config.rs
src-tauri/src/data/: db.rs  db_data.rs  wrapper.rs
src-tauri/src/op/: data_op.rs
src-tauri/src/ui/: mod.rs  notification.rs  setup.rs  system_tray.rs
src/components/: DataItem.vue  DataList.vue  TitleBar.vue
src/components/item-header/: ItemHeader.vue
src/components/notification/: Notification.vue  model.ts
src/layout/: Layout.vue
src/model/: staging_data.ts
src/router/: index.ts
