[package]
name = "molet-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.4"
clipboard-win = "4.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled"]
